# bfi

./: Cargo.toml
sample_programs/: multiply.bf
src/: interpreter.rs  lib.rs  main.rs  tests.rs
