[package]
name = "bfi"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bfc-ir = { git = "https://github.com/Alextopher/bfc-ir.git", branch = "master" }
clap = { version = "3.2.17", features = ["clap_derive", "derive"] }
